--- a/yars/apps/frontend/package.json
+++ b/yars/apps/frontend/package.json
@@ -7,8 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "dev": "webpack --mode development ./src/index.js --output ./static/frontend/main.js",
-    "build": "webpack --mode production ./src/index.js --output ./static/frontend/main.js"
+    "dev": "webpack --mode development ./src/index.js --output ./static/frontend/main.bundle.js",
+    "build": "webpack --mode production ./src/index.js --output ./static/frontend/main.bundle.js"
   },
   "author": "Nick Gashkov",
   "license": "MIT",
@@ -18,11 +18,16 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "prettier": "1.14.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "bulma": "^0.7.2"
   }
 }
