--- a/yars/apps/frontend/package.json
+++ b/yars/apps/frontend/package.json
@@ -19,15 +19,18 @@
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.4",
     "prettier": "1.14.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "webpack": "^4.21.0",
     "webpack-cli": "^3.1.2"
   },
   "dependencies": {
-    "bulma": "^0.7.2"
+    "bulma": "^0.7.2",
+    "font-awesome": "^4.7.0"
   }
 }
