--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "postinstall": "npm run build:dll",
     "prebuild": "npm run build:clean",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
-    "build:clean": "rimraf ./build",
+    "build:clean": "rimraf ./builds/prod",
     "build:dll": "node ./internals/scripts/dependencies.js",
     "dev": "cross-env NODE_ENV=development webpack --config internals/webpack/webpack.dev.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "dev:clean": "rimraf ./dev",
@@ -164,6 +164,7 @@
     "minimist": "1.2.0",
     "prop-types": "15.6.1",
     "react": "16.4.1",
+    "react-bulma-components": "2.2.0",
     "react-dom": "16.4.1",
     "react-helmet": "5.2.0",
     "react-intl": "2.4.0",
