--- a/frontend/package.json
+++ b/frontend/package.json
@@ -149,6 +149,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.26.0",
+    "bulma": "^0.7.2",
     "chalk": "^2.4.1",
     "compression": "1.7.2",
     "cross-env": "5.2.0",
@@ -164,7 +165,6 @@
     "minimist": "1.2.0",
     "prop-types": "15.6.1",
     "react": "16.4.1",
-    "react-bulma-components": "2.2.0",
     "react-dom": "16.4.1",
     "react-helmet": "5.2.0",
     "react-intl": "2.4.0",
@@ -228,6 +228,7 @@
     "lint-staged": "7.2.0",
     "ngrok": "3.0.1",
     "node-plop": "0.15.0",
+    "node-sass": "^4.9.4",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.5",
     "plop": "2.0.0",
@@ -235,6 +236,7 @@
     "prettier": "1.13.5",
     "react-test-renderer": "16.4.1",
     "rimraf": "2.6.2",
+    "sass-loader": "^7.1.0",
     "shelljs": "^0.8.2",
     "style-loader": "0.21.0",
     "stylelint": "9.3.0",
