--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,8 @@
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "prettify": "prettier --write"
+    "prettify": "prettier --write app/**/*.js",
+    "sortify": "import-sort --write app/**/*.js"
   },
   "lint-staged": {
     "*.js": [
@@ -222,6 +223,9 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "image-webpack-loader": "4.3.1",
+    "import-sort-cli": "^5.2.0",
+    "import-sort-parser-babylon": "^5.2.0",
+    "import-sort-style-eslint": "^5.0.0",
     "imports-loader": "0.8.0",
     "jest-cli": "23.1.0",
     "jest-styled-components": "5.0.1",
