Add 'Vue' frontend variant

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,14 @@ yars/settings/local.py
 
 # Ignore node modules.
 frontend/node_modules
+v-frontend/node_modules
 
 # Ignore development builds.
 frontend/builds/dev
 
 # Ignore 'yarn' error log.
-frontend/yarn-error.log
+frontend/yarn-error.log*
+v-frontend/yarn-error.log*
 
 
 # Keep this '.gitignore'.
