--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [tool.black]
 py36 = true
-exclude = '(yars/apps/\w+/migrations|yars/settings|yars/tests|frontend)'
+exclude = '(yars/apps/\w+/migrations|yars/settings|yars/tests|frontend|urls)'
